reshuffle css; search box width no longer expands on small; 'footer-copyright' now aside

--- a/wp-content/themes/lilleyplace/assets/scss/_custom.scss
+++ b/wp-content/themes/lilleyplace/assets/scss/_custom.scss
@@ -781,6 +781,11 @@ a {
 		&:focus {
 			background: scale-color(#4e2f66, $lightness: -20%);
 			width: 100%;
+
+			@media #{$small-only} {
+				width: rem-calc(90);
+			}
+
 		}
 
 	}
@@ -1351,6 +1356,11 @@ body.coming-soon {
 	margin-bottom: 0;
 }
 
+img.avatar {
+	@extend .image-frame;
+	padding: rem-calc(3);
+}
+
 /* comments */
 
 #comments {
@@ -1413,11 +1423,6 @@ body.coming-soon {
 
 .comment-reply-link {
 	font-size: 1rem;
-}
-
-img.avatar {
-	@extend .image-frame;
-	padding: rem-calc(3);
 }
 
 .content-excerpt {
